--- a/src/sharpkappa.csproj
+++ b/src/sharpkappa.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="AsyncAwaitBestPractices" Version="5.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Data.Sqlite" Version="1.0.113.7" />
   </ItemGroup>
 </Project>
